--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div>
             <label for="cityInput">Enter City:</label>
             <input type="text" id="cityInput" placeholder="E.g., London">
-            <button onclick="getWeather()">Get Weather</button>
+            <button onclick="getWeatherByCity()">Get Weather by City</button>
+            <button onclick="getWeatherByLocation()">Get Weather by Location</button>
         </div>
         <div id="weather-info">
             <!-- Weather information will be displayed here -->
