--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div id="weather-info">
             <!-- Weather information will be displayed here -->
         </div>
+        <div id="air-quality-info">
+            <!-- Air quality information will be displayed here -->
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
